// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.shopping.merchant.accounts.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/shopping/merchant/accounts/v1/termsofserviceagreementstate.proto";
import "google/shopping/merchant/accounts/v1/termsofservicekind.proto";

option csharp_namespace = "Google.Shopping.Merchant.Accounts.V1";
option go_package = "cloud.google.com/go/shopping/merchant/accounts/apiv1/accountspb;accountspb";
option java_multiple_files = true;
option java_outer_classname = "TermsOfServiceProto";
option java_package = "com.google.shopping.merchant.accounts.v1";
option php_namespace = "Google\\Shopping\\Merchant\\Accounts\\V1";
option ruby_package = "Google::Shopping::Merchant::Accounts::V1";

// Service to support `TermsOfService` API.
service TermsOfServiceService {
  option (google.api.default_host) = "merchantapi.googleapis.com";
  option (google.api.oauth_scopes) = "https://www.googleapis.com/auth/content";

  // Retrieves the `TermsOfService` associated with the provided version.
  rpc GetTermsOfService(GetTermsOfServiceRequest) returns (TermsOfService) {
    option (google.api.http) = {
      get: "/accounts/v1/{name=termsOfService/*}"
    };
    option (google.api.method_signature) = "name";
  }

  // Retrieves the latest version of the `TermsOfService` for a given `kind` and
  // `region_code`.
  rpc RetrieveLatestTermsOfService(RetrieveLatestTermsOfServiceRequest)
      returns (TermsOfService) {
    option (google.api.http) = {
      get: "/accounts/v1/termsOfService:retrieveLatest"
    };
  }

  // Accepts a `TermsOfService`. Executing this method requires admin access.
  rpc AcceptTermsOfService(AcceptTermsOfServiceRequest)
      returns (AcceptTermsOfServiceResponse) {
    option (google.api.http) = {
      post: "/accounts/v1/{name=termsOfService/*}:accept"
    };
    option (google.api.method_signature) = "name";
  }
}

// The `TermsOfService` message represents a specific version of the terms of
// service that merchants must accept to access certain features or services.
// For more information, see [Terms of
// Service](https://support.google.com/merchants/answer/160173).
//
// This message is important for the onboarding process, ensuring that merchants
// agree to the necessary legal agreements for using the service. Merchants can
// retrieve the latest terms of service for a given `kind` and `region` through
// `RetrieveLatestTermsOfService`, and accept them as required through
// `AcceptTermsOfService`.
message TermsOfService {
  option (google.api.resource) = {
    type: "merchantapi.googleapis.com/TermsOfService"
    pattern: "termsOfService/{version}"
  };

  // Identifier. The resource name of the terms of service version.
  // Format: `termsOfService/{version}`
  string name = 1 [
    (google.api.field_behavior) = IDENTIFIER,
    (google.api.resource_reference) = {
      type: "merchantapi.googleapis.com/TermsOfService"
    }
  ];

  // Region code as defined by [CLDR](https://cldr.unicode.org/). This is either
  // a country where the ToS applies specifically to that country or `001` when
  // the same `TermsOfService` can be signed in any country. However note that
  // when signing a ToS that applies globally we still expect that a specific
  // country is provided  (this should be merchant business country or program
  // country of participation).
  string region_code = 2;

  // The Kind this terms of service version applies to.
  TermsOfServiceKind kind = 3;

  // URI for terms of service file that needs to be displayed to signing users.
  optional string file_uri = 4;

  // Whether this terms of service version is external. External terms of
  // service versions can only be agreed through external processes and not
  // directly by the merchant through UI or API.
  bool external = 5;
}

// Request message for the `GetTermsOfService` method.
message GetTermsOfServiceRequest {
  // Required. The resource name of the terms of service version.
  // Format: `termsOfService/{version}`
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "merchantapi.googleapis.com/TermsOfService"
    }
  ];
}

// Request message for the `RetrieveLatestTermsOfService` method.
message RetrieveLatestTermsOfServiceRequest {
  // Required. Region code as defined by [CLDR](https://cldr.unicode.org/). This
  // is either a country when the ToS applies specifically to that country or
  // 001 when it applies globally.
  string region_code = 1 [(google.api.field_behavior) = REQUIRED];

  // Required. The Kind this terms of service version applies to.
  TermsOfServiceKind kind = 2 [(google.api.field_behavior) = REQUIRED];
}

// Request message for the `AcceptTermsOfService` method.
message AcceptTermsOfServiceRequest {
  // Required. The resource name of the terms of service version.
  // Format: `termsOfService/{version}`
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "merchantapi.googleapis.com/TermsOfService"
    }
  ];

  // Required. The account for which to accept the ToS.
  // Format: `accounts/{account}`
  string account = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "merchantapi.googleapis.com/Account"
    }
  ];

  // Required. Region code as defined by [CLDR](https://cldr.unicode.org/). This
  // is either a country when the ToS applies specifically to that country or
  // 001 when it applies globally.
  string region_code = 3 [(google.api.field_behavior) = REQUIRED];
}

// Response message for the `AcceptTermsOfService` method.
message AcceptTermsOfServiceResponse {
  // The agreement state after accepting the ToS.
  TermsOfServiceAgreementState terms_of_service_agreement_state = 1;
}
